--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.0",
     "react-typed": "^1.2.0",
