--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.4.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "react-scroll-motion": "^0.3.0",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.0"
