adjustment after deploy

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://masaki-0121.github.io/portfolio-masaki/",
   "name": "portfolio-masaki",
   "version": "0.1.0",
   "private": true,
